// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgres"
  url      = env("DATABASE_URL")
}
  // password        String     @default("")

model UserProfile {
  id              String     @id @default(uuid())
  userId          String     @unique
  name            String     @default("Deleted")
  imageUrl        String     @db.Text
  email           String     @db.Text
  about           String     @default("") @db.Text
  status          UserStatus @default(ONLINE)
  deleted         Boolean    @default(false)
  version         Int        @default(1)
  userCurrentRank String     @default("Basic Member")

  createdAt DateTime @default(now())

  bannedServers BannedServerMember[]
  serverInvites ServerInvite[]

  Member Member[]

  Server            Server[]
  DirectMessage     DirectMessage[]
  DirectChannelSend DirectChannel[]    @relation("UserOne")
  DirectChannelRepl DirectChannel[]    @relation("UserTwo")
  FriendOne         Friend[]           @relation("UserOne")
  FriendTwo         Friend[]           @relation("UserTwo")
  Blocker           Block[]            @relation("UserOne")
  Blocked           Block[]            @relation("UserTwo")
  UserNotification  UserNotification[]
  UserBilling       UserBilling[]

  @@unique([id, email])
  @@index([id])
  @@index([userId])
}

model Server {
  id       String @id @default(uuid())
  name     String
  imageUrl String @db.Text
  version  Int    @default(1)

  updatedAt DateTime @updatedAt
  deleted   Boolean  @default(false)

  userProfileId String      @default("Deleted")
  userProfile   UserProfile @relation(fields: [userProfileId], references: [id], onDelete: SetDefault)

  Member Member[]

  BannedServerMember BannedServerMember[]
  ServerInvite       ServerInvite[]
  Channel            Channel[]

  @@index([id])
  @@index([userProfileId])
}

model Member {
  id      String        @id @default(uuid())
  role    OldMemberRole @default(MEMBER)
  deleted Boolean       @default(false)
  version Int           @default(1)

  userProfileId String
  userProfile   UserProfile @relation(fields: [userProfileId], references: [id], onDelete: Cascade)

  serverId String
  server   Server @relation(fields: [serverId], references: [id], onDelete: Cascade)

  nickname String    @default("")
  Message  Message[]

  @@unique(name: "MemberUSID", [userProfileId, serverId])
}

model Channel {
  id        String         @id @default(uuid())
  name      String
  type      OldChannelType @default(TEXT)
  updatedAt DateTime       @updatedAt
  version   Int            @default(1)

  categories String
  deleted    Boolean @default(false)

  serverId String
  server   Server @relation(fields: [serverId], references: [id], onDelete: Cascade)

  Message    Message[]
  Attachment AttachmentChannel[]
}

model DirectChannel {
  id String @id @default(uuid())

  deleted Boolean @default(false)

  memberOneId String
  memberOne   UserProfile @relation("UserOne", fields: [memberOneId], references: [id], onDelete: Cascade)

  memberTwoId String
  memberTwo   UserProfile @relation("UserTwo", fields: [memberTwoId], references: [id], onDelete: Cascade)

  DirectMessage DirectMessage[]

  AttachmentDirect AttachmentDirect[]

  @@unique([memberOneId, memberTwoId])
}

model BannedServerMember {
  userProfileId String
  userProfile   UserProfile @relation(fields: [userProfileId], references: [id], onDelete: Cascade)

  serverId String
  server   Server @relation(fields: [serverId], references: [id], onDelete: Cascade)

  count       Int
  description String   @default("DefaultBanned ")
  assignedAt  DateTime @default(now())
  assignedBy  String

  @@id(name: "banId", [userProfileId, serverId])
}

model ServerInvite {
  userProfileId String
  userProfile   UserProfile @relation(fields: [userProfileId], references: [id], onDelete: Cascade)

  serverId String
  server   Server @relation(fields: [serverId], references: [id], onDelete: Cascade)

  inviteCode String   @unique
  deleted    Boolean  @default(false)
  assignedAt DateTime @updatedAt

  @@id(name: "inviteId", [userProfileId, serverId])
}

model Message {
  id      String @id @default(uuid())
  content String @db.Text
  version Int    @default(1)

  memberId String
  member   Member @relation(fields: [memberId], references: [id], onDelete: Cascade)

  channelId String
  channel   Channel @relation(fields: [channelId], references: [id], onDelete: Cascade)

  hasAttachment Boolean @default(false)
  deleted       Boolean @default(false)

  isReply         Boolean
  messageParentId String?
  messageParent   Message?  @relation("MessageToMessage", fields: [messageParentId], references: [id])
  children        Message[] @relation("MessageToMessage")

  pinned    Boolean  @default(false)
  edited    Boolean  @default(false)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  AttachmentChannel AttachmentChannel[]

  @@index([channelId])
  @@index([memberId])
}

model DirectMessage {
  id      String @id @default(uuid())
  content String @db.Text
  version Int    @default(1)

  userProfileId String
  userProfile   UserProfile @relation(fields: [userProfileId], references: [id], onDelete: Cascade)

  hasAttachment Boolean @default(false)
  deleted       Boolean @default(false)

  isReply         Boolean
  messageParentId String?
  messageParent   DirectMessage?  @relation("DirectMessageToMessage", fields: [messageParentId], references: [id])
  children        DirectMessage[] @relation("DirectMessageToMessage")

  pinned    Boolean  @default(false)
  edited    Boolean  @default(false)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  AttachmentDirect AttachmentDirect[]
  DirectChannel    DirectChannel      @relation(fields: [directChannelId], references: [id])
  directChannelId  String

  @@index([directChannelId])
  @@index([userProfileId])
}

model AttachmentChannel {
  id      String @id @default(uuid())
  fileUrl String @db.Text
  name    String @db.Text
  type    String

  messageId String
  message   Message @relation(fields: [messageId], references: [id], onDelete: Cascade)

  channelId String
  channel   Channel @relation(fields: [channelId], references: [id], onDelete: Cascade)

  @@index([channelId])
  @@index([messageId])
}

model AttachmentDirect {
  id      String @id @default(uuid())
  fileUrl String @db.Text
  name    String @db.Text
  type    String

  directMessageId String
  directMessage   DirectMessage @relation(fields: [directMessageId], references: [id], onDelete: Cascade)

  directChannelId String
  directChannel   DirectChannel @relation(fields: [directChannelId], references: [id], onDelete: Cascade)

  @@index([directChannelId])
  @@index([directMessageId])
}

model Friend {
  id      String  @id @default(uuid())
  pending Boolean @default(false)

  updatedAt DateTime @updatedAt

  friendOneId String      @map("friendOneId")
  friendOne   UserProfile @relation("UserOne", fields: [friendOneId], references: [id], onDelete: Cascade)

  friendTwoId String      @map("friendTwoId")
  friendTwo   UserProfile @relation("UserTwo", fields: [friendTwoId], references: [id], onDelete: Cascade)

  @@unique(name: "friendId", [friendOneId, friendTwoId])
  @@index([id])
}

model Block {
  id String @id @default(uuid())

  updatedAt DateTime @updatedAt

  blockerId String      @map("blockerId")
  blocker   UserProfile @relation("UserOne", fields: [blockerId], references: [id], onDelete: Cascade)

  blockedId String      @map("blockedId")
  blocked   UserProfile @relation("UserTwo", fields: [blockedId], references: [id], onDelete: Cascade)

  @@unique(name: "blockId", [blockerId, blockedId])
  @@index([id])
}

model Maintainence {
  id         String   @id @default(uuid())
  isOffline  Boolean  @default(false)
  lastUpdate DateTime @default(now())

  from  DateTime @default(now())
  until DateTime @default(now())

  @@index([id])
}

model UserBilling {
  customerId String @id @unique @default("?")

  userProfileId2 String
  email2         String
  userProfile UserProfile @relation(fields: [userProfileId2, email2], references: [id, email], onDelete: Cascade)

  Subcription Subscription[]

  @@unique([customerId, email2])
  @@index([customerId])
}

model Subscription {
  id        String @id @default(uuid())
  productId String @default(uuid())
  // product   ProductBilling @relation(fields: [productId], references: [productId], onDelete: Cascade)

  isActive Boolean  @default(false)
  until    DateTime @default(now())

  at DateTime @default(now())

  customerId    String?
  customer      UserBilling? @relation(fields: [customerId], references: [customerId], onDelete: Cascade)

  @@index([id])
}

// model ProductBilling {
//   productId   String @id @default(uuid())
//   productName String @default("Name")
//   // Subcription Subcription[]
// }

model UserNotification {
  id         String           @id @default(uuid())
  lastUpdate DateTime         @default(now())
  data       String           @default("")
  type       NotificationType @default(USER)
  isRead     Boolean          @default(false)

  userProfileId String      @default("Deleted")
  userProfile   UserProfile @relation(fields: [userProfileId], references: [id], onDelete: SetDefault)

  @@unique(name: "UserNotificationId", [id, userProfileId])
}

enum OldMemberRole {
  CREATOR
  OWNER
  ADMIN
  MODERATOR
  BOT
  MEMBER
  GUEST
  SPECIALGUEST
  LILWITCH
}

enum OldChannelType {
  TEXT
  AUDIO
  VIDEO
  NOTIFICATION
}

enum UserStatus {
  ONLINE
  OFFINE
  INVISIBLE
  IDLE
  DO_NOT_DISTURB
  DELETED
  BANNED
}

enum NotificationType {
  USER
  SYSTEM
}
